Data Validation with Spring MVC Annotations
analog zu 'https://www.udemy.com/course/spring-framework-5-beginner-to-guru/learn/lecture/7536420' (Lektion 12/233)