@@ -7,14 +7,17 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
+import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.servlet.ModelAndView;
+
+import javax.validation.Valid;
 
 @Slf4j
 @Controller
 public class RecipeController {
 
+    private static final String RECIPE_RECIPEFORM_URL = "recipe/recipeform";
     private final RecipeService recipeService;
 
     public RecipeController(RecipeService recipeService) {
@@ -22,12 +25,9 @@ public class RecipeController {
     }
 
     @GetMapping("/recipe/{id}/show")
-    // change path to "REST-like" concept
-    // das 'model' kommt von Spring MVC, die Eigenschaft 'recipe', ein 'Recipe'-Objekt wird mit der Methode 'findById()'
-    // vom 'RecipeServiceImpl' geholt:
     public String showById(@PathVariable String id, Model model) {
 
-        model.addAttribute("recipe", recipeService.findById(new Long(id)));
+        model.addAttribute("recipe", recipeService.findById(Long.valueOf(id)));
 
         return "recipe/show";
     }
@@ -36,24 +36,29 @@ public class RecipeController {
     public String newRecipe(Model model) {
         model.addAttribute("recipe", new RecipeCommand());
 
-        return "recipe/recipeform";
+        return RECIPE_RECIPEFORM_URL;
     }
 
     @GetMapping("recipe/{id}/update")
     public String updateRecipe(@PathVariable String id, Model model) {
         model.addAttribute("recipe", recipeService.findCommandById(Long.valueOf(id)));
 
-        return "recipe/recipeform";
+        return RECIPE_RECIPEFORM_URL;
     }
 
-    // if the server will receive a POST request via '[URL]/recipe', this method will be called
     @PostMapping("recipe")
-    // '@ModelAttribute' tells Spring to bind the form POST parameters
-    // to the RecipeCommand-Object (by the naming conventions in the form)
-    public String saveOrUpdate(@ModelAttribute RecipeCommand command) {
+    public String saveOrUpdate(@Valid @ModelAttribute("recipe") RecipeCommand command, BindingResult bindingResult) {
+
+        if(bindingResult.hasErrors()) {
+            bindingResult.getAllErrors().forEach(objectError -> {
+            log.debug(objectError.toString());
+            });
+
+            return RECIPE_RECIPEFORM_URL;
+        }
+
         RecipeCommand savedCommand = recipeService.saveRecipeCommand(command);
 
-        // 'redirect:...' tells Spring to redirect to a specific URL
         return "redirect:/recipe/" + savedCommand.getId() + "/show";
     }
 
@@ -65,11 +70,7 @@ public class RecipeController {
         return "redirect:/";
     }
 
-    // Spring MVC implementation of resolving HTML errors:
-    // ExceptionHandlerExceptionResolver (extending the interface HandlerExceptionResolver), which matches
-    // uncaught exceptions to @ExceptionHandler (use in Controllers!) and can be used with custom "NotFoundException.class"
-    // and custom Thymeleaf template "404error.html"
-    @ResponseStatus(HttpStatus.NOT_FOUND) // Attention: "higher precedence than exception-class" (??)
+    @ResponseStatus(HttpStatus.NOT_FOUND)
     @ExceptionHandler(NotFoundException.class)
     public ModelAndView handleNotFound(Exception exception) {
 
@@ -77,7 +78,7 @@ public class RecipeController {
         log.error(exception.getMessage());
 
         ModelAndView modelAndView = new ModelAndView();
-        modelAndView.setViewName("recipe/404error"); // must match Thymeleaf-template (here: "404error.html")
+        modelAndView.setViewName("recipe/404error");
         modelAndView.addObject("exception", exception);
 
         return modelAndView;
